--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol data-ns-test="shoppingList">
+  <li>A new laptop</li>
+  <li>A trip to Japan</li>
+  <li>A designer handbag</li>
+</ol>
+
+<ul data-ns-test="holidayList">
+  <li>Bali, Indonesia</li>
+  <li>Santorini, Greece</li>
+  <li>Maldives</li>
+</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
