--- a/main.html
+++ b/main.html
@@ -8,16 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<ol data-ns-test="shoppingList">
-  <li>A new laptop</li>
-  <li>A trip to Japan</li>
-  <li>A designer handbag</li>
+	<ol >
+  <li data-ns-test="shoppingList">A new laptop</li>
+  <li data-ns-test="shoppingList">A trip to Japan</li>
+  <li data-ns-test="shoppingList">A designer handbag</li>
 </ol>
 
-<ul data-ns-test="holidayList">
-  <li>Bali, Indonesia</li>
-  <li>Santorini, Greece</li>
-  <li>Maldives</li>
+<ul >
+  <li data-ns-test="holidayList">Bali, Indonesia</li>
+  <li data-ns-test="holidayList">Santorini, Greece</li>
+  <li data-ns-test="holidayList">Maldives</li>
 </ul>
     <script type="text/javascript" src="./script.js">
 </script>
